<resources>
    <string name="app_name">ContactsManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_head">Email</string>
    <string name="email">jithivarghese111@gmail.com</string>
    <string name="phone_head">Mobile number</string>
    <string name="home_head">Home number</string>
    <string name="work_head">Work number</string>
    <string name="phone">9947732296</string>
    <string name="name">Name</string>
    <string name="nothing">No contacts available</string>
    <string name="add_photo">add photo</string>
    <string name="delete">Delete all</string>
</resources>
