<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/name" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image"
        android:src="@drawable/noimage"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone_head"
        android:id="@+id/phone_head"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/phone"
        android:id="@+id/phone"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/phone_head"/>

    <ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/call"
        android:contentDescription="@string/app_name"
        android:layout_gravity="end"
        android:layout_alignTop="@+id/phone"
        android:layout_alignRight="@+id/add"
        android:layout_alignEnd="@+id/add"
        android:onClick="makeCall"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_head"
        android:id="@+id/email_head"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email_head"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/edit"
        android:contentDescription="@string/app_name"
        android:id="@+id/add"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:onClick="editContact"/>

</RelativeLayout>