<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectPhoto">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:background="@color/blue"/>

            <TextView
                android:id="@+id/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/name_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:id="@+id/phone_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_head"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/email_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_head"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/save"
                android:contentDescription="@string/app_name"
                android:onClick="saveContact"/>

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cancel"
                android:contentDescription="@string/app_name"
                android:layout_toRightOf="@+id/save"
                android:layout_toEndOf="@+id/save"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:onClick="cancelContact"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>